--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Nitrocid.Extras.Contacts.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Nitrocid.Extras.Contacts.csproj
@@ -12,11 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="VisualCard" Version="4.0.0.3" />
-    <PackageReference Include="VisualCard.Extras" Version="4.0.0.3" />
+    <AdditionalFiles Include="Resources\Languages\*.json" AptLocIsLanguagePath="true" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="VisualCard" Version="4.0.0.3" />
+    <PackageReference Include="VisualCard.Extras" Version="4.0.0.3" />
     <PackageReference Update="LocaleStation" Version="1.2.0" />
   </ItemGroup>
 
