--- a/public/Nitrocid.Addons/Nitrocid.Extras.Chemistry/Nitrocid.Extras.Chemistry.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Chemistry/Nitrocid.Extras.Chemistry.csproj
@@ -9,10 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="ChemiStar" Version="1.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Update="LocaleStation" Version="1.2.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <AdditionalFiles Include="Resources\Languages\*.json" AptLocIsLanguagePath="true" />
   </ItemGroup>
 
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
