--- a/public/Nitrocid.Addons/Nitrocid.Extras.Diagnostics/Nitrocid.Extras.Diagnostics.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Diagnostics/Nitrocid.Extras.Diagnostics.csproj
@@ -9,10 +9,11 @@
   
   <ItemGroup>
     <PackageReference Include="Microsoft.Diagnostics.Runtime" Version="3.1.512801" />
-  </ItemGroup>
-  
-  <ItemGroup>
     <PackageReference Update="LocaleStation" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="Resources\Languages\*.json" AptLocIsLanguagePath="true" />
   </ItemGroup>
 
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
