--- a/public/Nitrocid.Addons/Nitrocid.Extras.Hashes/Nitrocid.Extras.Hashes.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Hashes/Nitrocid.Extras.Hashes.csproj
@@ -9,10 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="Crc32.NET" Version="1.2.0" />
+    <PackageReference Update="LocaleStation" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="LocaleStation" Version="1.2.0" />
+    <AdditionalFiles Include="Resources\Languages\*.json" AptLocIsLanguagePath="true" />
   </ItemGroup>
 
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
