--- a/public/Nitrocid.Addons/Nitrocid.Extras.Images.Icons/Nitrocid.Extras.Images.Icons.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Images.Icons/Nitrocid.Extras.Images.Icons.csproj
@@ -9,10 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="Terminaux.Images.Icons" Version="7.0.0-beta4-20250614105709" />
+    <PackageReference Update="LocaleStation" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="LocaleStation" Version="1.2.0" />
+    <AdditionalFiles Include="Resources\Languages\*.json" AptLocIsLanguagePath="true" />
   </ItemGroup>
 
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
