--- a/public/Nitrocid.Addons/Nitrocid.Extras.Mods/Nitrocid.Extras.Mods.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Mods/Nitrocid.Extras.Mods.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <AdditionalFiles Include="Resources\Languages\*.json" AptLocIsLanguagePath="true" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Update="LocaleStation" Version="1.2.0" />
   </ItemGroup>
 
