--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Nitrocid.Extras.Notes.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Nitrocid.Extras.Notes.csproj
@@ -8,10 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="FluentFTP" Version="52.1.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Update="LocaleStation" Version="1.2.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <AdditionalFiles Include="Resources\Languages\*.json" AptLocIsLanguagePath="true" />
   </ItemGroup>
 
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
