--- a/public/Nitrocid.Addons/Nitrocid.Extras.Ssh/Nitrocid.Extras.Ssh.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Ssh/Nitrocid.Extras.Ssh.csproj
@@ -12,10 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="SSH.NET" Version="2025.0.0" />
+    <AdditionalFiles Include="Resources\Languages\*.json" AptLocIsLanguagePath="true" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="SSH.NET" Version="2025.0.0" />
     <PackageReference Update="LocaleStation" Version="1.2.0" />
   </ItemGroup>
 
