--- a/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Nitrocid.Extras.UnitConv.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Nitrocid.Extras.UnitConv.csproj
@@ -11,10 +11,11 @@
     <PackageReference Include="FluentFTP" Version="52.1.0" />
     <PackageReference Include="Magico" Version="1.4.1" />
     <PackageReference Include="UnitsNet" Version="5.74.0" />
+    <PackageReference Update="LocaleStation" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="LocaleStation" Version="1.2.0" />
+    <AdditionalFiles Include="Resources\Languages\*.json" AptLocIsLanguagePath="true" />
   </ItemGroup>
 
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
