--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Nitrocid.ShellPacks.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Nitrocid.ShellPacks.csproj
@@ -12,14 +12,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <AdditionalFiles Include="Resources\Languages\*.json" AptLocIsLanguagePath="true" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentFTP" Version="52.1.0" />
     <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
     <PackageReference Include="MailKit" Version="4.12.1" />
     <PackageReference Include="SharpCompress" Version="0.40.0" />
     <PackageReference Include="SSH.NET" Version="2025.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Update="LocaleStation" Version="1.2.0" />
   </ItemGroup>
 
