fix - Fixed malformed launchSetting.json
---

We've fixed a malformed launchSettings.json file causing issues with
Visual Studio.

---

Type: fix
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid/Properties/launchSettings.json
+++ b/public/Nitrocid/Properties/launchSettings.json
@@ -8,7 +8,7 @@
       "commandName": "Project",
       "commandLineArgs": "reset"
     },
-    LanguageTools.GetLocalized("NKS_KERNEL_STARTING_ENVIRONMENT_BASENAME"): {
+    "Nitrocid KS": {
       "commandName": "Project"
     },
     "Nitrocid KS - Test Interactive": {
