--- a/private/Nitrocid.LocaleChecker/Nitrocid.LocaleChecker.csproj
+++ b/private/Nitrocid.LocaleChecker/Nitrocid.LocaleChecker.csproj
@@ -31,7 +31,12 @@
     <EmbeddedResource Update="Resources\AnalyzerResources.resx" Generator="ResXFileCodeGenerator" LastGenOutput="AnalyzerResources.Designer.cs">
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\public\Nitrocid\Resources\Languages\eng.json" Visible="false" />
+    <EmbeddedResource Include="..\..\public\Nitrocid\Resources\Languages\eng.json" Visible="false">
+      <LogicalName>Nitrocid.Langs eng.json</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\..\public\Nitrocid.Addons\**\Resources\Languages\eng.json" Visible="false">
+      <LogicalName>Nitrocid.Langs.Addons %(EmbeddedResource.FullPath)</LogicalName>
+    </EmbeddedResource>
     <EmbeddedResource Include="..\..\public\Nitrocid\Resources\Settings\*.json" Visible="false">
       <LogicalName>%(EmbeddedResource.FullPath)</LogicalName>
     </EmbeddedResource>
